# email-mobile-game-spendings

./: .gitignore  MessageContent.py  MobileStoreEmailManager.py  PurchasedItem.py  README.md  apple.html  common.py  data.csv  main.py  plot.py  pyproject.toml
src/email_mobile_game_spendings/: __init__.py  categorize.py  cli.py  csv_utils.py  log.py  mbox.py  models.py  pipeline.py  plotting.py
src/email_mobile_game_spendings/extractors/: __init__.py  apple.py  common.py  gplay.py
